# godot-rust-ecs-goap

./: .gitignore  .gut_editor_config.json  Game.gd  project.godot
assets/sprites/: forestDecoration_0.png.import  forestDecoration_1.png.import  forest_.png.import  golem_.png.import  satyr_.png.import  troll_.png.import
godot-ecs-goap-tests/: Cargo.toml
godot-ecs-goap-tests/src/: lib.rs  test_goap_planner.rs
godot-src/Entities/EditorEntity/: EditorEntity.gd  EditorEntity.tscn  EditorEntityData.gd
godot-src/Entities/blueprints/: firepit_resource.tres  food.tres  sample_entity_agent.tres  troll.tres  (+2 more)
godot-src/Native/: ActionResource.gdns  CollectibleResource.gdns  DamageResource.gdns  Ecs.gdnlib  Ecs.gdns  EcsFactory.gdns  EntityResource.gdns  FindObjectSensorResource.gdns  GoalResource.gdns  GoapBlackboardNode.gdns  HealthResource.gdns  HungerResource.gdns  InventoryResource.gdns  RegenerationResource.gdns  SpeedResource.gdns
godot-src/main/: Camera2D.gd  GUI_handler.gd  Game.tscn  GameWorld.gd  add_resource.gd
plugins/rust-ecs/: config.ini
rust-src/: Cargo.toml  build.rs
rust-src/derive-godot-resource/: Cargo.toml
rust-src/derive-godot-resource/src/: lib.rs
rust-src/src/: ecs.rs  godot_entity_builder.rs  lib.rs
rust-src/src/actions/: actions_declaration.rs  build_firepit.rs  calm_down.rs  chop_tree.rs  collect_wood.rs  find_cover.rs  find_food.rs  find_tree.rs  get_wood_from_stack.rs  godot_action_resource.rs  mod.rs
rust-src/src/components/: agent_components.rs  components_traits.rs  curves.rs  godot_component_resources.rs  mod.rs  utility_ai.rs
rust-src/src/goals/: default_goal.rs  goals_declaration.rs  godot_goal_resource.rs  keep_fed.rs  mod.rs
rust-src/src/goap/: example_sensors.rs  goap_planner.rs  mod.rs
rust-src/src/goap_system/: action.rs  ecs_thinker.rs  goal.rs  goap_system.rs  godot_blackboard.rs  mod.rs
rust-src/src/godot/: init_hook.rs  mod.rs
rust-src/src/systems/: fear_stimuli_system.rs  godot_output_system.rs  health_systems.rs  hunger_system.rs  inventory_system.rs  mod.rs  navigation_system.rs  targeting_system.rs  thirst_system.rs
rust-src/test_data/: collect_wood.json  mutliple_paths.json
tests/: test_ecs.gd  test_gnd.gdnlib
(+39 files in other folders)
