[package]
name = "godot-rust-goap-ecs-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot-rust-goap-ecs = {path = "../rust-src", default-features = false}
gdnative = { version = "0.10.0", features = ["formatted", "async"] }
gdnative-core = { version = "0.10.0" }
hecs = "0.7.6"
backtrace = "0.3"
rand = "0.8.5"
approx = "0.5"
ron = "0.8"
serde = "1"
serde_json = "1"
bincode = "1"
serde_yaml = "0.8.23"
rmp-serde = "1"
futures = "0.3"
