[package]
name = "godot-rust-goap-ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { version = "0.10.0", features = ["formatted", "gd-test", "serde", "async"] }
hecs = "0.7.6"
backtrace = "0.3"
rand = "0.8.5"
derive-godot-resource = { path = "derive-godot-resource"}
pathfinding = "3.0"

[build-dependencies]
heck = "0.4.0"
