[package]
name = "godot-rust-goap-ecs"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
entry-point = []
default = ["entry-point"]

[dependencies]
gdnative = { version = "0.10.0", features = ["formatted", "gd-test", "serde", "async"] }
hecs = "0.7.6"
backtrace = "0.3"
rand = "0.8.5"
derive-godot-resource = { path = "derive-godot-resource"}
pathfinding = "3.0"

[build-dependencies]
heck = "0.4.0"

[dev-dependencies]
serde_json = "^1.0"
serde_derive = { version = "^1.0" }
serde = { version = "^1.0" }
