[package]
name = "derive-godot-resource"
version = "0.1.0"
edition = "2021"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["nightly"] }
syn = {version="1.0",features=["full","fold", "extra-traits"]}
quote = "1.0"
trybuild = { version = "1.0", features = ["diff"] }
gdnative = { version = "0.10.0", features = ["formatted"] }
